# cpp-sdk

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  install_dpp_msvc.ps1  setup_dpp.ps1  topgg.rc
cmake/: FindDPP.cmake
docs/: Doxyfile  header.html  style.css
examples/: leaderboard.cpp  updatestats.cpp  votebot.cpp
http/: request.hpp  response.hpp
include/topgg/: autoposter.h  client.h  client.hpp  dpp.h  errors.hpp  models.h  models.hpp  request.hpp  response.hpp  result.h  topgg.h
include/topgg/dpp/: autoposter.h  client.h  models.h  result.h
src/: autoposter.cpp  client.cpp  errors.cpp  models.cpp  result.cpp
src/dpp/: autoposter.cpp  client.cpp  models.cpp  result.cpp
src/http/: request.cpp  response.cpp
